technitian profile and some error fallback and wrap

--- a/backend/api/templates/privacy/privacy_policy.html
+++ b/backend/api/templates/privacy/privacy_policy.html
@@ -178,7 +178,7 @@
             <ul>
                 <li><strong>Email:</strong> shijilkt27@gmail.com</li>
                 <li><strong>Phone:</strong> 9061444017</li>
-                <li><strong>Address:</strong> ASA technologies, vengeri, kozhikode, kerala</li>
+                <li><strong>Address:</strong> tex fix, vengeri, kozhikode, kerala</li>
             </ul>
         </div>
 
